
  * Entirely remove taps support - it doesn't preserve foreign key constraints and adds a lot of complexity

* Enhancements

  * New "sql" step - executes SQL provided as a string OR a local/remote SQL file provided as a URL
  * Die with a useful error message if a column specified in an import step doesn't exist - thanks @chrisle https://github.com/seamusabshere/data_miner/issues/17

2.3.4 / 2012-07-06

* Bug fixes

  * Fix silly deadlock

2.3.3 / 2012-07-06

* Bug fixes

  * Always register data miner scripts with DataMiner.model_names or else DataMiner.run won't work as expected - just bad logic before

2.3.2 / 2012-06-25

* Bug fixes

  * Make sure 't', 'true', 1, '1', 'on', 'yes', etc. are treated as true for boolean columns (and 'f', 'false', 'FALSE', etc.)

2.3.1 / 2012-06-22

* Bug fixes

  * Avoid duplicate rows by correctly identifying auto-increment versus non-auto-increment integer primary keys
  * Properly sort per-row column statistics

2.3.0 / 2012-06-21

* Enhancements

  * Using https://github.com/seamusabshere/upsert to speed up import steps when possible.

2.2.0 / 2012-06-11

* Breaking changes

  * You must specify DataMiner.units_convert = {:alchemist,:conversions}

* Enhancements

  * Swappable unit conversion libraries [@dkastner]
  * Intelligent parsing of commas and periods in number fields [@ihough]

2.1.2 / 2012-05-22

* Breaking changes

  * DataMiner::Run#column_statistics_for(column_name, period) -> {initial,final}_column_statistics(column_name)
  * Remove std dev from statistics kept

* Enhancements

  * Added zero count and null count

2.1.1 / 2012-05-16

* Enhancements

  * Keep row counts from before and after runs.
  * If DataMiner.per_column_statistics?, keep per-column statistics from before and after runs.

2.1.0 / 2012-05-10

* Enhancements

  * Don't use "perform" as a class or instance method name - it can interfere with Resque or Sidekiq.