@@ -8,6 +8,7 @@ unreleased
 
   * New "sql" step - executes SQL provided as a string OR a local/remote SQL file provided as a URL
   * Die with a useful error message if a column specified in an import step doesn't exist - thanks @chrisle https://github.com/seamusabshere/data_miner/issues/17
+  * Allow setting :validate => true on import steps - thanks @chrisle https://github.com/seamusabshere/data_miner/issues/18
 
 2.3.4 / 2012-07-06
 
